--- a/public/assetes/locales/fa/translation.json
+++ b/public/assetes/locales/fa/translation.json
@@ -1,12 +1,12 @@
 {
   "title" : "دکتر کوروش پرند",
-  "publications" : "انتشارات",
+  "articles": "مقالات",
   "about-me": "درباره من",
   "books" : "کتاب ها",
   "conferences": "کنفرانس ها",
   "courses" : "دوره ها",
   "projects": "پروژه ها",
-  "contact": "تماس با من",
+  "contact": "تماس با ما",
   "phoneNumber": "+9821 29903003",
   "email": "k_parand@sbu.ac.ir",
   "address": "Faculty of Mathematical Sciences, Shahid Beheshti University,Shahriyari Sq. Evin, Tehran",
