--- a/public/assetes/locales/en/translation.json
+++ b/public/assetes/locales/en/translation.json
@@ -8,7 +8,8 @@
   "projects": "Projects",
   "contact": "Contact",
   "phoneNumber": "+9821 29903003",
-  "email": "k_parand@sbu.ac.ir",
+  "email1": "k_parand@sbu.ac.ir",
+  "email2": "k.parand1394@gmail.com",
   "address": "Faculty of Mathematical Sciences, Shahid Beheshti University,Shahriyari Sq. Evin, Tehran",
   "publication-list": [
     {
